2008-07-10  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala:
	* vala/valaproperty.vala:

	Change GObject properties to always notify on value change, remove the
	[Notify] attribute and add a boolean CCode attribute parameter named
	`notify', based on patch by Jared Moore, fixes bug 540700

	* tests/classes-properties.vala: update

2008-07-98  Jared Moore  <jaredm@svn.gnome.org>

	* gobject/valaccodecompiler.vala:

	Apply shell quoting to -X flag arguments, fixes bug 542183.

2008-07-09  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemethodbinding.vala:
	* vala/valacreationmethod.vala:
	* vala/valainterfacewriter.vala:
	* vapigen/valagidlparser.vala:

	Add support for creation methods with a different (mostly super) type
	than the type of the object it creates. Add a `type' parameter to the
	CCode attribute which will be used to get the casts right for such
	creation methods.

	* vapi/gio-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerated, fixes bug 540661

2008-07-08  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
	* vapigen/valagidlparser.vala:

	Allow vapi metadata to declare abstract methods, fix GtkCellRenderer
	methods _get_size and _render to be abstract, based on patch by
	Jared Moore, fixes bug 522355

	* vapi/gtk+-2.0.vapi: Regenerated

2008-07-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Fix partial interface reimplementation when the base class is in
	an external library

2008-07-08  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/glib-2.0.vapi:

	Fix typo, patch by Christian Hergert, fixes bug 542002

2008-07-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraylengthfield.vala:
	* vala/valaarraymovemethod.vala:
	* vala/valaarrayresizemethod.vala:

	Mark array methods as external

2008-07-07  Raffaele Sandrini  <raffaele@sandrini.ch>

	* compiler/valacompiler.vala:
