@@ -29,5 +29,6 @@ public enum Vala.CCodeModifiers {
 	STATIC = 1 << 0,
 	REGISTER = 1 << 1,
 	EXTERN = 1 << 2,
-	INLINE = 1 << 3
+	INLINE = 1 << 3,
+	VOLATILE = 1 << 4
 }
